--- a/mmbot_py/my_mmbot.service
+++ b/mmbot_py/my_mmbot.service
@@ -1,13 +1,13 @@
 # copy this file to /etc/systemd/system/
 [Unit]
-Description=Trading Service Reporter
+Description=Mixin Messenger Bot
 
 [Service]
 Type=simple
 # anaconda python executor
 ExecStart=/opt/miniconda/envs/mmbot/bin/python /root/mmbot/mmbot_py/main.py
-StandardOutput=append:/root/mmbot/data/logs/乐乐和她的好朋友.log
-StandardError=append:/root/mmbot/data/logs/乐乐和她的好朋友.log
+StandardOutput=append:/root/mmbot/logs/乐乐和她的好朋友.log
+StandardError=append:/root/mmbot/logs/乐乐和她的好朋友.log
 Restart=always
 User=root
 # reporter working directory
